[package]
name = "rust-starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 'bin' sections define binaries to compile
# each one of the following will be built with 'cargo build --bins'
[[bin]]
name = "hello"
path = "src/main.rs"
[[bin]]
name = "variables"
path = "src/tuto/variables/main.rs"
[[bin]]
name = "functions"
path = "src/tuto/functions/main.rs"
[[bin]]
name = "control_flow"
path = "src/tuto/control_flow/main.rs"
[[bin]]
name = "ownership"
path = "src/tuto/ownership/main.rs"
[[bin]]
name = "structures"
path = "src/tuto/structures/main.rs"
[[bin]]
name = "enumerations"
path = "src/tuto/enumerations/main.rs"
[[bin]]
name = "rest-api-axum"
path = "src/api/rest/axum/main.rs"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.1", features = ["full"] }
